workloads/immich/valkey-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-valkey
  namespace: immich
  labels:
    app: immich
    component: valkey
spec:
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: immich
      component: valkey
  template:
    metadata:
      labels:
        app: immich
        component: valkey
    spec:
      containers:
        - name: valkey
          image: docker.io/valkey/valkey:9@sha256:3b55fbaa0cd93cf0d9d961f405e4dfcc70efe325e2d84da207a0a8e6d8fde4f9
          ports:
            - containerPort: 6379
              name: redis
          livenessProbe:
            exec:
              command:
                - valkey-cli
                - ping
            initialDelaySeconds: 15
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - valkey-cli
                - ping
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 5
          resources:
            requests:
              cpu: 25m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
